kqed_dev4/src/objects/Bios__c.object
<CustomObject>
    <fields>
        <fullName>Interest_Count__c</fullName>
        <description>Number of times this interest has been applied.</description>
        <inlineHelpText>Number of times this interest has been applied.</inlineHelpText>
        <label>Interest Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Description_Type__c</fullName>
        <label>Description</label>
        <picklist>
            <controllingField>Interest_Description__c</controllingField>
            <picklistValues>
                <fullName>Adult Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancient &amp; Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques &amp; Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astronomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biography &amp; Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology &amp; Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business &amp; Economy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caregiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civilizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentaries - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama and Mystery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film &amp; Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness &amp; Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folk Art &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Wine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forensics &amp; Investigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gardening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geneology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Description__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Culture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education and Children</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; How-to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News &amp; Public Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science &amp; Nature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Affiliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Detail_Text__c</fullName>
        <label>Interest Detail Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Level_1__c</fullName>
        <label>Interest Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culture &amp; Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>History</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home &amp; How-to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>News &amp; Public Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science &amp; Nature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Level_2__c</fullName>
        <label>Interest Level 2</label>
        <picklist>
            <controllingField>Interest_Level_1__c</controllingField>
            <picklistValues>
                <fullName>Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ancient &amp; Classical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antiques &amp; Collectibles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archeaology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astronomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biography &amp; Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology &amp; Chemistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birthday Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business &amp; Economy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caregiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Civilizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications &amp; Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy &amp; Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enlightenment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Film &amp; Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fine Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fitness &amp; Nutrition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folk Art &amp; Crafts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forensics &amp; Investigations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fun &amp; Games</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest_Status__c</fullName>
        <label>Interest Status</label>
        <picklist>
            <picklistValues>
                <fullName>Implied</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest Detail</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_Score__c</fullName>
        <label>Likelihood Score</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAL ACADEMY SCI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAL PERFORMANCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EARTH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPLOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGNP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIDDENVILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HIDDENVLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NRDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLANPARENTGG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAN JOSE MUSEUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAN JOSE REP THEATRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF BALLET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF ED FUND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF MOMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF OPERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SF SYMPHONY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TECH MUSEUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THEATREWORKS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>YERBA BUENA CTR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Recipient__c</fullName>
        <label>New Recipient</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominated_By__c</fullName>
        <label>Nominated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Board of Directors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emeritus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Show__c</fullName>
        <label>Program/Show</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Program Interests</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <label>Programs</label>
        <picklist>
            <picklistValues>
                <fullName>Allied Health Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Involvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continuing Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education &amp; Human Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food and Agricultural Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honors Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercollegiate Athletics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberal Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lifelong Learning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Math</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Natural Resource Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreational Sports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research and Scholarship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science and Engineering</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Rating_Closeness__c</fullName>
        <label>Rating/Closeness</label>
        <picklist>
            <picklistValues>
                <fullName>A = $5M+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B= $1M-$4.9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C= $500k-$999,999k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D= $100k-$499,999k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E= $50k-$99,999k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F= Less than $50k</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_Type__c</fullName>
        <label>Rating Type</label>
        <picklist>
            <picklistValues>
                <fullName>5 = Longshot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4= Not Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3= Mid Range Closeness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2= Second Tier Closeness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1= Top Tier Closeness</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Location__c</fullName>
        <label>Real Estate Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Value__c</fullName>
        <label>Real Estate Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recipient_Charitable__c</fullName>
        <label>Recipient</label>
        <picklist>
            <picklistValues>
                <fullName>AIDS Action Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Antiquarian Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Ballet Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Ireland Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Repertory Theatre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amherst College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Rescue League Fall River</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Animal Rescue League of Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anti-Defamation League</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appalachian Mountain Club</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arcadia Players</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B.C. High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Babson College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basketball Hall of Fame</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belmont Hill School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beth Israel Deaconess Medical Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Brother Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Big Sister Association of Greater Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackside Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Athenaeum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Baroque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Latin School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Lyric Opera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Medical Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston Symphony Orchestra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boys &amp; Girls Clubs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brandeis University</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brigham &amp; Women&apos;s Hospital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bios</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School Lookup</label>
        <referenceTo>Schools__c</referenceTo>
        <relationshipLabel>Bios</relationshipLabel>
        <relationshipName>Bios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_of_Information__c</fullName>
        <label>Source of Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sport__c</fullName>
        <label>Sport</label>
        <picklist>
            <picklistValues>
                <fullName>Band</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basketball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheerleading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Football</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skiing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Snowboarding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soccer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surfing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swimming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volleyball</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>Date Term Initiates</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>TEXT(School__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>concatenates the text from different Bio Record Types into a single field.  Each of the different Bio record types has a different page layout, and associated fields that make sense for the information we’re attempting to capture in the Bio record.</description>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TABio_Id__c</fullName>
        <description>TA Bio external Id</description>
        <externalId>true</externalId>
        <label>TA Bio Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Title_Role__c</fullName>
        <label>Title/Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Year_Of_Degree__c</fullName>
        <formula>MID(degree_year__c , 0, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year of Degree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <inlineHelpText>Enter the year of the Contact&apos;s Degree year.</inlineHelpText>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>account_id__c</fullName>
        <description>Account Id</description>
        <inlineHelpText>Account Id</inlineHelpText>
        <label>Account Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>batch_process_count__c</fullName>
        <description>This field is used for Apex batch processing for post processing ETL information</description>
        <label>Batch Process Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bulk_load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>bulk_load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>confirm_implied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Interests</description>
        <label>Confirm Implied</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>